# les-aiguilles-blanches

./: .gitattributes  .gitignore  LICENSE  README.md  build-desktop.sh  build-tauri.sh  capture-screenshots.sh  clean-screenshots.sh  dev.sh  index-modular.html  index-phaser.html  index.html  package-lock.json  package.json  publish-remote.sh  publish.sh  pytest.ini  run-tests.sh  setup.sh  test-update-check.sh  tests-phaser.html  tests.html  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: feedback.yml
.github/agents/: code-health.agent.md
.github/workflows/: ci.yml
css/: style.css
docs/: ARCHITECTURE.md  ART_STYLE.md  GAMEPLAY.md  GAME_DESIGN.md  ROADMAP.md  TESTING.md
electron/: afterPack.cjs  constants.cjs  generate-icon.cjs  main.cjs  package.json  preload.cjs
js/: config.js  game.js  input.js  localization.js  main.js  renderer.js
public/: manifest.json
scripts/: capture-screenshots.sh  capture_screenshots.py  clean-screenshots.sh  test-update-check.sh
src/: main.js  main.ts  setup.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/config/: gameConfig.js  gameConfig.ts  levels.js  levels.ts  localization.js  localization.ts  sceneKeys.ts  storageKeys.ts  theme.ts
src/scenes/: BootScene.js  BootScene.ts  ContractsScene.ts  CreditsScene.js  CreditsScene.ts  DailyRunsScene.ts  DialogueScene.js  DialogueScene.ts  GameScene.js  GameScene.ts  HUDScene.js  HUDScene.ts  LevelCompleteScene.js  LevelCompleteScene.ts  LevelSelectScene.ts  (+8 more)
(+122 files in other folders)
